Fix residual field layout issues
Fixing the misplaced required marker left some Sass which is no longer
required. This removed that Sass. Part of #549.

--- a/wcomponents-theme/src/main/sass/wc.ui.fieldLayout.scss
+++ b/wcomponents-theme/src/main/sass/wc.ui.fieldLayout.scss
@@ -9,22 +9,19 @@ ul.wc-fieldlayout {
 }
 //scss-lint:enable QualifyingElement
 
-.wc-field {
-	// > .wc-label {
-	// 	@include fit-content; // allows for better position of mandatory indicator.
-	// }
-
-	.wc_fld_pl { //this is the placeholder for a null or moved label (moved for checkbox or radio). Remove on narrow viewports.
-		display: none;
-	}
-
-	+ .wc-field {
-		margin-top: $vgap-normal;
-	}
+// This is the placeholder for a null or moved label (moved for checkbox or radio). Not shown on narrow viewports.
+.wc_fld_pl {
+	display: none;
 }
 
+// Verticl space between fields in a WFieldLayout.
+.wc-field  + .wc-field {
+	margin-top: $vgap-normal;
+}
+
+// The input container div.
 .wc-input {
-	margin-top: $vgap-small;
+	margin-top: $vgap-small; // push off of the label.
 
 	// InputWidth class is added to the field to signify that an inputWidth is in use so we can size the components.
 	.wc_inputwidth > & {
@@ -62,18 +59,15 @@ ul.wc-fieldlayout {
 			display: inline-block;
 			vertical-align: text-top;
 
-			&:first-child { //the first child is the label or stand-in or merely an empty placeholder/spacer
+			&:first-child { //The first child is the label or stand-in or merely an empty placeholder/spacer.
 				width: $label-width;
 			}
 		}
 
 		> .wc-input {
+			margin-top: 0; // Remove stacked margin.
 			max-width: $input-width;
 			width: $input-width;
-		}
-
-		.wc-input { // reset
-			margin-top: 0;
 		}
 	}
 }
